<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/arsenal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster">

        <TextView
            android:id="@+id/tv_club_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:maxLines="2"
            android:text="@string/club_name">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/coach">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/separator"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/tv_coach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/coach_name">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/nickname">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/separator"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/nickname_name">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/established">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/separator"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/tv_established"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/established_date">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/stadium">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/separator"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/tv_stadium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:text="@string/stadium_name">
            </TextView>
        </LinearLayout>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>